bin/tests/snapshots/useless_has_attr__dcdeee74e5d10b5199175881fce69d02_lint_errfmt.snap
---
source: bin/tests/useless_has_attr.rs
---
if x.a ? b then x.a.b else default
---
<temp_file_path>>1:1:W:19:[useless_has_attr] Consider using `x.a.b or default` instead of this `if` expression
