bin/tests/snapshots/useless_has_attr__dcdeee74e5d10b5199175881fce69d02_lint_json.snap
---
source: bin/tests/useless_has_attr.rs
---
if x.a ? b then x.a.b else default
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "useless_has_attr",
      "note": "This `if` expression can be simplified with `or`",
      "code": 19,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 35
            }
          },
          "message": "Consider using `x.a.b or default` instead of this `if` expression",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 35
              }
            },
            "fix": "x.a.b or default"
          },
          "fixable": true
        }
      ]
    }
  ]
}
