bin/tests/snapshots/useless_has_attr__dcdeee74e5d10b5199175881fce69d02_lint_stderr.snap
---
source: bin/tests/useless_has_attr.rs
---
if x.a ? b then x.a.b else default
---
[19] Warning: This `if` expression can be simplified with `or`
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ if x.a ? b then x.a.b else default
   │ ─────────────────┬────────────────  
   │                  ╰────────────────── Consider using x.a.b or default instead of this if expression
───╯
