bin/tests/snapshots/useless_has_attr__f5edc729a910faa40ea89cb086561a43_lint_errfmt.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else b.c
---
<temp_file_path>>1:1:W:19:Consider using `x.a or b.c` instead of this `if` expression
