bin/tests/snapshots/useless_has_attr__f5edc729a910faa40ea89cb086561a43_lint_stderr.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else b.c
---
[19] Warning: This `if` expression can be simplified with `or`
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ if x ? a then x.a else b.c
   │ ─────────────┬────────────  
   │              ╰────────────── Consider using x.a or b.c instead of this if expression
───╯
