bin/tests/snapshots/useless_has_attr__fix_00a0e664b50f02d0652b368944bcfcec9375659d5a499735c55ded81eb48871c.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else if b then c else d

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if x ? a then x.a else if b then c else d
+x.a or (if b then c else d)
