bin/tests/snapshots/useless_has_attr__fix_1a6c00d3bae5aeeb9ee347a4ba13b0886242059b9de2128c0efb98b8e36aa16b.snap
---
source: bin/tests/useless_has_attr.rs
---
if x ? a then x.a else default

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-if x ? a then x.a else default
+x.a or default
